Fix dark mode

--- a/source/css/_global/index.styl
+++ b/source/css/_global/index.styl
@@ -36,6 +36,7 @@
   --default-bg-color: $theme-color
   --zoom-bg: #fff
   --mark-bg: alpha($dark-black, .3)
+  --trans-bg: rgba(255, 255, 255, .6)
 
 body
   position: relative
