--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -335,7 +335,7 @@
         padding: 0
         width: max-content
         border-radius: 8px
-        background: rgba(255, 255, 255, .6)
+        background: var(--trans-bg)
         box-shadow: 0 5px 20px -4px rgba($dark-black, .5)
         backdrop-filter: blur(20px)
         -webkit-backdrop-filter: blur(20px)
