--- a/source/css/_mode/darkmode.styl
+++ b/source/css/_mode/darkmode.styl
@@ -40,11 +40,12 @@ if hexo-config('darkmode.enable') || hexo-config('display_mode') == 'dark'
     --timeline-bg: lighten(#121212, 5)
     --zoom-bg: #121212
     --mark-bg: alpha($dark-black, .6)
+    --trans-bg: rgba(0, 0, 0, .6)
 
     #web_bg:before
       position: absolute
       width: 100%
-      height: 100%
+      heigark-bght: 100%
       background-color: alpha($dark-black, .7)
       content: ''
 
